# img-processing-task

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  utils.cpp  utils.hpp
