cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(SOURCE_EXE main.cpp)
set(SOURCE_LIB utils.cpp)
add_executable( main main.cpp )
add_library(utils STATIC ${SOURCE_LIB})
target_link_libraries( main ${OpenCV_LIBS} )
target_link_libraries(main utils)